--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/native": "^7.1.6",
     "async-storage": "^0.1.0",
     "axios": "^1.13.4",
     "expo": "~54.0.33",
     "expo-constants": "~18.0.9",
+    "expo-image": "~3.0.11",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.23",
     "expo-status-bar": "~3.0.8",
