--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "^2.11.4",
     "@react-navigation/native": "^7.1.6",
+    "animatable": "^1.2.3",
     "async-storage": "^0.1.0",
     "axios": "^1.13.4",
     "expo": "~54.0.33",
